examples/test/testpolicy4694.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy4694
  namespace: namespace437
spec:
  podSelector:
    matchLabels:
      key44: value39
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key27: value13
          key21: value47
      podSelector:
        matchLabels:
          key19: value2
          key12: value1
